src/test/run-pass/large-records.rs



// -*- rust -*-
fn f() {
    let foo:
            {a: int,
             b: int,
             c: int,
             d: int,
             e: int,
             f: int,
             g: int,
             h: int,
             i: int,
             j: int,
             k: int,
             l: int} =
        {a: 0,
         b: 0,
         c: 0,
         d: 0,
         e: 0,
         f: 0,
         g: 0,
         h: 0,
         i: 0,
         j: 0,
         k: 0,
         l: 0};
}

fn main() { f(); }